chore: move recursive comparison/assertion tests to assertj-core-tests